[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/sprites/proj2.1.png" type="Texture" id=1]
[ext_resource path="res://projectiles/base_projectile.gd" type="Script" id=2]

[node name="Projectile" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 8
collision_mask = 17
script = ExtResource( 2 )
speed = 10.0
damage = 250
set_dir = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -9, 0, 0, -5, 9, 0, 0, 5 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="CharSearchRefresh" type="Timer" parent="."]
wait_time = 0.075
autostart = true
[connection signal="body_entered" from="." to="." method="_on_Projectile_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="CharSearchRefresh" to="." method="_on_CharSearchRefresh_timeout"]
